# Automated-Reports

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
docs/: DOCKS.md
src/: args.rs  download_report_chunks.rs  error.rs  helper.rs  indexing_report_struct.rs  main.rs  routes.rs  server.rs  share.rs  tokio_tasks.rs  trait.rs
src/api_server/: api_requests.rs  mod.rs  response_handlers.rs
src/api_server/api_requests/: req_payments_tools.rs  req_provider.rs  req_user.rs
src/api_server/api_token/: token.rs
src/api_server/api_token/utils/: format_utils.rs
src/api_server/response_handlers/: resp_payments_tools.rs  resp_provider.rs  resp_user.rs
src/db/: connect.rs
src/error/: error_response.rs  errors_utils.rs
src/handlers/: cryptography.rs  download_report.rs  generate_report.rs  get_file_weight.rs  get_generated_hashes.rs  get_share.rs  mod.rs  not_found.rs
src/helper/: build_tasks.rs  create_file.rs  date.rs  file_struct.rs  generate_xlsx.rs  handler_info_about_file_by_id.rs  report_type.rs  working_with_xlsx_list.rs  xlsx_help_fun.rs
src/helper/chunks/: chunk_manager.rs
src/helper/report_type/: agent.rs  constants.rs  merchant.rs  taxi_company.rs
src/helper/user_info/: user.rs
src/helper/working_with_xlsx_list/: sheet_creator.rs
src/server/: cors.rs  tokens_storage.rs
src/share/: share_helper.rs
src/trait/: api_request.rs  automated_report_response.rs  chunks_trait.rs  filter_report.rs
src/type/: types.rs
