[package]
name = "Automated_reports"
version = "0.0.1"
edition = "2021"
authors = ["Pankov Danil <pankovdanil587@gmail.com>"]

[dependencies]
actix-web = "4.3.0"
actix-cors = "0.6.4"

tokio = { version = "1.25.0", features = ["fs"] }
tokio-stream = "0.1.11"

serde_json = "1.0.92"
serde = { version = "1.0.152", features = ["derive"] }

rust_xlsxwriter = "0.26.0"
csv = "1.1.6"

env_logger = "0.10.0"
dotenv_codegen = "0.15.0"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"

chrono = "0.4.23"

thiserror = "1.0.38"

md5 = "0.7.0"

reqwest = { version = "0.11.3", features = ["blocking","socks"] }

pin-project = "1.0.12"

sodiumoxide = "0.2.7"

rand = "0.8.5"

uuid = { version = "1.3.3", features = ["v4"] }

lazy_static = "1.4.0"

# Database
mysql_async  = { version = "0.32.2", default-features = false }